fix: uncomment display flex properties for button alignment

--- a/packages/ui/src/elements/DatePicker/index.scss
+++ b/packages/ui/src/elements/DatePicker/index.scss
@@ -55,7 +55,7 @@ $cal-icon-width: 18px;
       border: none;
       outline: none;
       padding: 0;
-      // display: flex;
+      display: flex;
       cursor: pointer;
     }
 
