--- a/packages/ui/src/elements/ReactSelect/DropdownIndicator/index.scss
+++ b/packages/ui/src/elements/ReactSelect/DropdownIndicator/index.scss
@@ -3,7 +3,7 @@
 @layer payload-default {
   .dropdown-indicator {
     cursor: pointer;
-    // display: flex;
+    display: flex;
     @include btn-reset;
 
     &:focus-visible {
